# pancake

./: .gitignore  BRAINSTORMING.md  CLAUDE.md  CONTEXT.md  MOBILE_PLAN.md  README.md  WORKLOG.md  install.sh  pyproject.toml  uninstall.sh
claude/: morning.md  think.md
data/: session_status.json  undo_stack.json  user_context.md
hammerspoon/: pancake_hotkey.lua
launchd/: com.locus.plist
pancake/: accounts.py  chat.py  chat_local.py  cli.py  context.py  email.py  priorities.py  session_status.py  status_cli.py  tools.py
pancake/commands/: drop.py  focus.py  morning.py  note.py  priority.py  session.py  status.py  think.py
scripts/: migrate_to_profiles.py
templates/: PRIORITIES.md
tests/: conftest_ui.py  test_accounts.py  test_chat_backend.py  test_commands.py  test_context.py  test_install.py  test_priorities.py  test_server.py  test_session_status.py  test_tools.py  test_ui.py
web/: server.py
web/static/: app.js  manifest.json  style.css  sw.js
web/templates/: index.html
